# LearnOpenGL

./: CMakeLists.txt
example/lighting_texture/: CMakeLists.txt  Shader.h  lamp.frag  light.frag  light.vs  main.cpp
resources/: light.frag  light.vs  shader.frag  shader.vs
src/: CMakeLists.txt  camera.h  main.cpp
